# bozo

./: .codecov.yml  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  Doxypress.json  MIGRATION.md  README.md  conanfile.py  docker-compose.yml  layout.xml
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark.h  bozo_benchmark.cpp  performance.cpp
cmake/: bozo-config.cmake
docs/: howto.md  recv_impl_example.dox
examples/: CMakeLists.txt  connection_pool.cpp  request.cpp  retry_request.cpp  role_based_request.cpp  transaction.cpp
include/: CMakeLists.txt
include/bozo/: asio.h  cancel.h  connection.h  connection_info.h  connection_pool.h  connector.h  deadline.h  error.h  execute.h  optional.h  ozo.h  query.h  query_builder.h  query_conf.h  request.h  result.h  shortcuts.h  time_traits.h  transaction.h  transaction_options.h  transaction_status.h  type_traits.h
include/bozo/core/: concept.h  none.h  nullable.h  options.h  recursive.h  strong_typedef.h  thread_safety.h  unwrap.h
include/bozo/detail/: asio_compat.hpp  base36.h  begin_statement_builder.h  bind.h  connection_pool.h  deadline.h  endian.h  epoch.h  float.h  functional.h  make_copyable.h  post_handler.h  stub_mutex.h  timeout_handler.h  typed_buffer.h  wrap_executor.h
include/bozo/ext/: boost.h  std.h
include/bozo/ext/boost/: optional.h  scoped_ptr.h  shared_ptr.h  tuple.h  uuid.h  weak_ptr.h
include/bozo/ext/std/: array.h  duration.h  list.h  nullopt_t.h  nullptr_t.h  optional.h  pair.h  shared_ptr.h  string.h  time_point.h  tuple.h  unique_ptr.h  vector.h  weak_ptr.h
include/bozo/failover/: retry.h  role_based.h  strategy.h
include/bozo/impl/: async_connect.h  async_execute.h  async_request.h  cancel.h  connection.h  connection_pool.h  io.h  query.h  request_oid_map.h  result.h  result_status.h  transaction.h  transaction_status.h
include/bozo/io/: array.h  binary_query.h  composite.h  istream.h  ostream.h  recv.h  send.h  size_of.h  type_traits.h
include/bozo/pg/: definitions.h  handle.h  types.h
include/bozo/pg/types/: bool.h  bytea.h  char.h  float.h  integer.h  interval.h  json.h  jsonb.h  ltree.h  name.h  oid.h  text.h  timestamp.h  uuid.h
include/ozo/: asio.h  query_builder.h
include/ozo/detail/: asio_compat.hpp
include/ozo/impl/: async_request.h  result_status.h
scripts/: benchmark.sh  build.sh  definitions.h.jinja  run_example.sh
test_package/: CMakeLists.txt
tests/: CMakeLists.txt  binary_deserialization.cpp  binary_query.cpp  binary_serialization.cpp  bind.cpp  composite.cpp  concept.cpp  connection.cpp  connection_info.cpp  connection_mock.h  connection_pool.cpp  deadline.cpp  error.cpp  none.cpp  query_builder.cpp  query_conf.cpp  result.cpp  result_mock.h  test_asio.h  test_error.h  transaction.cpp  transaction_status.cpp  type_traits.cpp
tests/detail/: base36.cpp  begin_statement_builder.cpp  deadline.cpp  functional.cpp  make_copyable.cpp  timeout_handler.cpp
tests/external_project/: CMakeLists.txt
tests/failover/: retry.cpp  role_based.cpp  strategy.cpp
tests/impl/: async_connect.cpp  async_end_transaction.cpp  async_get_result.cpp  async_request.cpp  async_send_query_params.cpp  async_start_transaction.cpp  cancel.cpp  request_oid_map.cpp  request_oid_map_handler.cpp
tests/integration/: cancel_integration.cpp  connection_pool_integration.cpp  execute_integration.cpp  get_connection_integration.cpp  request_integration.cpp  result_integration.cpp  retry_integration.cpp  role_based_integration.cpp  transaction_integration.cpp
tests/io/: size_of.cpp
